--- a/themes/PaperMod/i18n/zh.yaml
+++ b/themes/PaperMod/i18n/zh.yaml
@@ -24,8 +24,8 @@
 - id: code_copied
   translation: "已复制！"
   
-- id: categories
+- identifier: categories
   translation: "分类"
   
-- id: tags
+- identifier: tags
   translation: "标签"
