--- a/content/posts/20230610.md
+++ b/content/posts/20230610.md
@@ -103,3 +103,13 @@ add_action( 'wp_enqueue_scripts', 'my_scripts_method' );
 ```
 <a href="#" class="topbutton"></a>
 ```
+**3、首页显示摘要**
+修改twentytwelve主题中content.php文件。
+
+```
+<?php if ( is_search() ) : // Only display Excerpts for Search ?>
+```
+改成
+```
+<?php if ( is_search() || is_home()  ) : // 全部摘要 ?>
+```
