--- a/content/posts/20230610.md
+++ b/content/posts/20230610.md
@@ -19,7 +19,7 @@ description: " "
 
 下面是一些代码实现的功能：
 
-**1、只搜索标题**
+**一、只搜索标题**
 
 ```
 add_filter( 'posts_search', '_search_by_title', 10, 2 );
@@ -39,7 +39,7 @@ function _search_by_title( $search, $wp_query ) {
 }
 ```
 
-**2、回到顶部**
+**二、回到顶部**
 
 1、参考How to Create a Scroll Back-to-Top Button in WordPress，创建topbutton.js，将以下代码复制到文件。
 
@@ -103,7 +103,7 @@ add_action( 'wp_enqueue_scripts', 'my_scripts_method' );
 ```
 <a href="#" class="topbutton"></a>
 ```
-**3、首页显示摘要**
+**三、首页显示摘要**
 修改twentytwelve主题中content.php文件。
 
 ```
