--- a/content/posts/20250708.md
+++ b/content/posts/20250708.md
@@ -5,6 +5,7 @@ categories: ["梦"]
 author: "MagicQ"
 date: 2025-07-08T00:06:13+08:00
 description: " "
+password: "0000"
 ---
 
 记不清我们俩从哪逃离了人群，走到了无人问津的楼梯口。
