--- a/content/posts/20250730.md
+++ b/content/posts/20250730.md
@@ -13,4 +13,4 @@ password: ""
 ``https://github.com/DJB-Developer/wechat- androidQ -history-versions/releases``
 微信MAC各版本下载地址：
 ``https://github.com/zsbai/wechat-versions/releases``
-打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.
+打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.00
