--- a/content/posts/20250730.md
+++ b/content/posts/20250730.md
@@ -6,11 +6,19 @@ password: ""
 ---
 
 微信windows PC 各版本下载地址:
+
 ``https://github.com/tom-snow/wechat-windows-versions/releases``
+
 微信windowsPCx86各版本下载地址：
+
 ``https://github.com/tom-snow/wechat-windows-versions-x86/releases``
+
 微信android各版本下载地址:
+
 ``https://github.com/DJB-Developer/wechat- androidQ -history-versions/releases``
+
 微信MAC各版本下载地址：
+
 ``https://github.com/zsbai/wechat-versions/releases``
-打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.00
+
+打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.
