--- a/content/posts/20250730.md
+++ b/content/posts/20250730.md
@@ -21,4 +21,5 @@ password: ""
 
 ``https://github.com/zsbai/wechat-versions/releases``
 
-打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.
+打开网页后，找到对应的版本，点开Assets，下载对应的版本即可.哈哈
+
