--- a/content/posts/20251107.md
+++ b/content/posts/20251107.md
@@ -1,6 +1,6 @@
 ﻿---
 title: "20251107"
-tags: ["标签"]
+tags: ["hugo","bat"]
 date: 2025-11-07T09:03:35+08:00
 password: ""
 ---
@@ -68,3 +68,4 @@ if %errorlevel% equ 0 (
 )
 
 ```
+
